Trying to fix wrong navbar styling on Safari (4)

--- a/book-store-frontend/src/components/header/Header.css
+++ b/book-store-frontend/src/components/header/Header.css
@@ -19,6 +19,7 @@
 .navbar-container {
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     background-color: #191919;
+    flex: 1 0 auto;
 }
 
 .navbar-brand-custom {
